--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dev_dependencies:
   firebase_auth: ^3.6.4
   cloud_firestore: ^3.4.5
   provider: ^6.0.3
+  shared_preferences: ^2.0.15
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
