--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  image_picker: ^0.8.5+3
+  get: ^4.6.5
+  firebase_core: ^1.21.0
+  firebase_auth: ^3.6.4
+  cloud_firestore: ^3.4.5
+  firebase_storage: ^10.3.7
+  provider: ^6.0.3
+  shared_preferences: ^2.0.15
+  carousel_slider: ^4.1.1
+  dots_indicator: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -45,14 +55,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  get: ^4.6.5
-  firebase_core: ^1.21.0
-  firebase_auth: ^3.6.4
-  cloud_firestore: ^3.4.5
-  provider: ^6.0.3
-  shared_preferences: ^2.0.15
-  carousel_slider: ^4.1.1
-  dots_indicator: ^2.1.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
