--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.0.15
   carousel_slider: ^4.1.1
   dots_indicator: ^2.1.0
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
